# mrassistant-mock-fhir

./: .gitignore  Makefile  README.md
mcp-client-sample/: Makefile  pyproject.toml
mcp-client-sample/src/mcp_client/: __init__.py  cli.py  client.py
mcp-server/: .env.example  .env.ngrok.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
mcp-server/data/: mock_bundle.json
mcp-server/docs/: IMPLEMENTATION_PLAN.md  MCP_CLIENT_INTEGRATION.md  MCP_TOOL_CONTRACTS.md  SPECIALTY_MAPPING.md
mcp-server/postman/: Hospital_MCP_Local.postman_environment.json  Hospital_MCP_Tools.postman_collection.json  README.md
mcp-server/scripts/: docker-entrypoint.sh  load_mock_data.py  sample_mcp_http_client.py  start_ngrok.sh  test_fhir_curl.sh  test_mcp_client.py  test_tools.py
mcp-server/src/mcp_server/: __init__.py  http_server.py  server.py
mcp-server/src/mcp_server/fhir/: __init__.py
mcp-server/src/mcp_server/tools/: __init__.py  appointments.py  patients.py  practitioners.py  slots.py
