[project]
name = "mrassistant-mcp-client"
version = "0.1.0"
description = "Sample MCP client for Mr Assistant FHIR integration"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
mcp-client = "mcp_client.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_client"]
